modified:   Makefile 	modified:   include/dase.h 	deleted:    src/dase_fft1024.c 	deleted:    src/dase_fft128.c 	deleted:    src/dase_fft16.c 	deleted:    src/dase_fft2048.c 	deleted:    src/dase_fft256.c 	deleted:    src/dase_fft32.c 	deleted:    src/dase_fft4096.c 	deleted:    src/dase_fft512.c 	deleted:    src/dase_fft64.c 	deleted:    src/dase_fft8.c 	deleted:    src/dase_fft_common.c 	modified:   test/tfftc.c 	modified:   tools/fftgen/Makefile 	modified:   tools/fftgen/fftgen.awk

--- a/dase/tools/fftgen/Makefile
+++ b/dase/tools/fftgen/Makefile
@@ -7,3 +7,5 @@ dase_fft.c: fftgen.awk
 	echo 8 | awk -f $< > dase_fft256.c
 	echo 9 | awk -f $< > dase_fft512.c
 	echo 10 | awk -f $< > dase_fft1024.c
+	echo 11 | awk -f $< > dase_fft2048.c
+
